@@ -2,53 +2,130 @@
 
 return {
   ["bronze"] = {
-    light = {r=112/255, g=84/255, b=48/255},
-    medium = {r=80/255, g=60/255, b=32/255},
+    light = {r=112/255, g=84/255, b=48},
+    medium = {r=80/255, g=60/255, b=32},
     dark = {r=53/255, g=39/255, b=23/255}
   },
   ["iron"] = {
-    light = {r=119/255, g=111/255, b=108/255},
-    medium = {r=84/255, g=78/255, b=77/255},
+    light = {r=119/255, g=111/255, b=108},
+    medium = {r=84/255, g=78/255, b=77},
     dark = {r=55/255, g=50/255, b=50/255}
   },
   ["steel"] = {
-    light = {r=183/255, g=170/255, b=168/255},
-    medium = {r=131/255, g=122/255, b=119/255},
+    light = {r=183/255, g=170/255, b=168},
+    medium = {r=131/255, g=122/255, b=119},
     dark = {r=84/255, g=78/255, b=78/255}
   },
   ["mithril"] = {
-    light = {r=87/255, g=90/255, b=138/255},
-    medium = {r=62/255, g=64/255, b=98/255},
+    light = {r=87/255, g=90/255, b=138},
+    medium = {r=62/255, g=64/255, b=98},
     dark = {r=39/255, g=42/255, b=64/255}
   },
   ["adamant"] = {
-    light = {r=96/255, g=124/255, b=96/255},
-    medium = {r=68/255, g=87/255, b=68/255},
+    light = {r=96/255, g=124/255, b=96},
+    medium = {r=68/255, g=87/255, b=68},
     dark = {r=45/255, g=58/255, b=45/255}
   },
   ["rune"] = {
-    light = {r=96/255, g=133/255, b=150/255},
-    medium = {r=68/255, g=94/255, b=106/255},
+    light = {r=96/255, g=133/255, b=150},
+    medium = {r=68/255, g=94/255, b=106},
     dark = {r=45/255, g=62/255, b=70/255}
   },
   ["orikalkum"] = {
-    light = {r=135/255, g=23/255, b=16/255},
-    medium = {r=109/255, g=16/255, b=0/255},
+    light = {r=135/255, g=23/255, b=16},
+    medium = {r=109/255, g=16/255, b=0},
     dark = {r=64/255, g=0/255, b=0/255}
   },
   ["necronium"] = {
-    light = {r=16/255, g=77/255, b=39/255},
-    medium = {r=16/255, g=62/255, b=32/255},
+    light = {r=16/255, g=77/255, b=39},
+    medium = {r=16/255, g=62/255, b=32},
     dark = {r=0/255, g=36/255, b=16/255}
   },
   ["bane"] = {
-    light = {r=39/255, g=39/255, b=53/255},
-    medium = {r=32/255, g=32/255, b=42/255},
+    light = {r=39/255, g=39/255, b=53},
+    medium = {r=32/255, g=32/255, b=42},
     dark = {r=16/255, g=16/255, b=23/255}
   },
   ["elder-rune"] = {
-    light = {r=42/255, g=114/255, b=133/255},
-    medium = {r=32/255, g=92/255, b=107/255},
+    light = {r=42/255, g=114/255, b=133},
+    medium = {r=32/255, g=92/255, b=107},
     dark = {r=16/255, g=53/255, b=64/255}
+  },
+
+  ["guam"] = {
+    unfinished = {r=166/255, g=213/255, b=217/255},
+    tint = {r=0/255, g=161/255, b=0/255}
+  },
+  ["tarromin"] = {
+    unfinished = {r=217/255, g=215/255, b=166/255},
+    tint = {r=0/255, g=214/255, b=0/255}
+  },
+  ["marrentill"] = {
+    unfinished = {r=217/255, g=166/255, b=215/255},
+    tint = {r=0/255, g=222/255, b=0/255}
+  },
+  ["harralander"] = {
+    unfinished = {r=217/255, g=170/255, b=166/255},
+    tint = {r=31/255, g=167/255, b=0/255}
+  },
+  ["ranarr"] = {
+    unfinished = {r=166/255, g=217/255, b=168/255},
+    tint = {r=7/255, g=147/255, b=0/255}
+  },
+  ["toadflax"] = {
+    unfinished = {r=135/255, g=134/255, b=103/255},
+    tint = {r=1/255, g=103/255, b=0/255}
+  },
+  ["spirit-weed"] = {
+    unfinished = {r=202/255, g=202/255, b=220/255},
+    tint = {r=129/255, g=204/255, b=167/255}
+  },
+  ["irit"] = {
+    unfinished = {r=202/255, g=202/255, b=220/255},
+    tint = {r=4/255, g=167/255, b=0/255}
+  },
+  ["wergali"] = {
+    unfinished = {r=217/255, g=215/255, b=166/255},
+    tint = {r=228/255, g=7/255, b=0/255}
+  },
+  ["avantoe"] = {
+    unfinished = {r=191/255, g=174/255, b=175/255},
+    tint = {r=0/255, g=131/255, b=0/255}
+  },
+  ["kwuarm"] = {
+    unfinished = {r=210/255, g=194/255, b=192/255},
+    tint = {r=61/255, g=114/255, b=0/255}
+  },
+  ["bloodweed"] = {
+    unfinished = {r=97/255, g=111/255, b=99/255},
+    tint = {r=162/255, g=22/255, b=0/255}
+  },
+  ["snapdragon"] = {
+    unfinished = {r=192/255, g=147/255, b=60/255},
+    tint = {r=53/255, g=119/255, b=0/255}
+  },
+  ["cadantine"] = {
+    unfinished = {r=229/255, g=200/255, b=178/255},
+    tint = {r=45/255, g=107/255, b=0/255}
+  },
+  ["lantadyme"] = {
+    unfinished = {r=229/255, g=200/255, b=178/255},
+    tint = {r=0/255, g=153/255, b=55/255}
+  },
+  ["dwarf-weed"] = {
+    unfinished = {r=178/255, g=199/255, b=229/255},
+    tint = {r=0/255, g=141/255, b=0/255}
+  },
+  ["torstol"] = {
+    unfinished = {r=237/255, g=206/255, b=182/255},
+    tint = {r=0/255, g=187/255, b=0/255}
+  },
+  ["arbuck"] = {
+    unfinished = {r=140/255, g=100/255, b=93/255},
+    tint = {r=235/255, g=88/255, b=0/255}
+  },
+  ["fellstalk"] = {
+    unfinished = {r=119/255, g=155/255, b=128/255},
+    tint = {r=17/255, g=82/255, b=7/255}
   }
 }
