@@ -1,6 +1,8 @@
 require("prototypes.item.items")
+require("prototypes.fluid.unf_fluids")
 
 require("prototypes.group")
 require("prototypes.recipe_category")
 require("prototypes.recipe.potion_recipes")
 require("prototypes.recipe.combination_potion_recipes")
+require("prototypes.recipe.unf_potion_recipes")
