@@ -42,6 +42,18 @@ data:extend({
     name = "rs-unfinished-fluids",
     order = "rs-herblore-006-unf",
     group = "rs-herblore"
+  },
+  {
+    type = "item-subgroup",
+    name = "rs-herblore-vialling",
+    order = "rs-herblore-008-unf",
+    group = "rs-herblore"
+  },
+  {
+    type = "item-subgroup",
+    name = "rs-herblore-unvialling",
+    order = "rs-herblore-009-unf",
+    group = "rs-herblore"
   }
 })
 
